testsuite/tests/default/default-fail01.stderr
default-fail01.hs:3:1: error: [GHC-26555]
    • ‘Integer’ is not a class
    • When checking the types in a default declaration

