testsuite/tests/default/default-fail01.hs
{-# LANGUAGE NamedDefaults #-}

default Integer (Int)
